[gd_scene load_steps=3 format=3 uid="uid://dqx88verdtm48"]

[ext_resource type="FontFile" uid="uid://bs0f53s1deni1" path="res://asset_packs/ui/shooting star font/Shooting Star.ttf" id="1_72wx1"]
[ext_resource type="Script" path="res://scenes/UI/optionsmenu.gd" id="1_cailc"]

[node name="Optionsmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cailc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 98.0
offset_right = 960.0
offset_bottom = 596.0
theme_override_constants/separation = 150

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Controls" type="Button" parent="HBoxContainer/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="Volume" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="Music" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="Sensitivity" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 30
text = "Mouse Sensitivity"

[node name="Adjusts" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Bindings" type="Button" parent="HBoxContainer/Adjusts"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 30
text = "Bindings"

[node name="Volumeslider" type="HSlider" parent="HBoxContainer/Adjusts"]
layout_mode = 2
max_value = 1.5
step = 0.001
value = 1.5

[node name="Musiccheck" type="CheckButton" parent="HBoxContainer/Adjusts"]
layout_mode = 2
button_pressed = true

[node name="Mousesensslider" type="HSlider" parent="HBoxContainer/Adjusts"]
layout_mode = 2
value = 50.0

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 894.0
offset_top = 462.0
offset_right = 975.0
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("1_72wx1")
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="pressed" from="HBoxContainer/Labels/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="HBoxContainer/Adjusts/Bindings" to="." method="_on_bindings_pressed"]
[connection signal="value_changed" from="HBoxContainer/Adjusts/Volumeslider" to="." method="_on_volumeslider_value_changed"]
[connection signal="toggled" from="HBoxContainer/Adjusts/Musiccheck" to="." method="_on_musiccheck_toggled"]
[connection signal="value_changed" from="HBoxContainer/Adjusts/Mousesensslider" to="." method="_on_mousesensslider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
